# KB

./: .env.example  .gitignore  README.md  pyproject.toml
apps/cli/: main.py
apps/dashboard/: app.py
apps/dashboard/pages/: 1_首页.py  2_产业地图.py  3_stock_profile.py  3_个股档案.py  4_watchlist.py  4_关注清单.py  5_trigger_center.py  5_触发器中心.py  6_知识库管理.py
config/: scoring_rules.yml  stocks.yml  triggers.yml  valuation_rules.yml
config/industries/: ai.yml  robot.yml
docs/_templates/: stock_report.j2
docs/superpowers/plans/: 2026-05-15-stock-kb.md
docs/superpowers/specs/: 2026-05-15-stock-kb-design.md
scripts/: clean_stocks_yml.py  expand_industry_tree.py  init_kb_data.py  migrate_add_foreign_keys.py  migrate_stocks_to_kb.py
tests/e2e/: conftest.py  test_dashboard.py  test_playwright_dashboard.py
tests/fixtures/: stock_300308_invalid.csv  stock_300308_missing.csv  stock_300308_no_trigger.csv  stock_300308_q1_2024.csv  stock_300308_technical.csv
tests/integration/: test_workflow.py
tests/unit/: test_adapters.py  test_config.py  test_locks.py  test_models.py  test_qualitative_scoring.py  test_report_engine.py  test_scoring_engine.py  test_trigger_engine.py  test_trigger_state.py  test_tushare_adapter.py  test_valuation_engine.py  test_watchlist.py
