[tool.poetry]
name = "stock-kb"
version = "0.1.0"
description = "Personal stock knowledge base"
authors = ["user"]
readme = "README.md"
packages = [
    { include = "packages" },
    { include = "apps" },
]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0"
pydantic = "^2.0"
pydantic-yaml = "^1.0"
streamlit = "^1.32"
plotly = "^5.18"
pandas = "^2.0"
akshare = "^1.12"
fasteners = "^0.19"
jinja2 = "^3.1"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
black = "^24.0"
ruff = "^0.3"

[tool.poetry.scripts]
cli = "apps.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
